# agent-package-index

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
app/: config.py  factory.py  models.py  worker.py
app/api/: example.py  packages.py
app/schemas/: model_gen.py  package.py  scoring.py  search.py  tasks.py
app/services/: scoring.py  search.py
app/services/crawlers/: npm_client.py  osv_client.py  pypi_client.py  stats_client.py
app/tasks/: _db.py  compute_scores.py  crawl_npm.py  crawl_pypi.py  crawl_vulnerabilities.py  example.py  orchestrator.py
migrations/: 001_create_example_table.sql  002_create_package_tables.sql  003_create_version_and_stats_tables.sql  004_create_reputation_tables.sql
scripts/: generate_models.py
tests/: conftest.py  test_crawl_npm.py  test_crawl_pypi.py  test_example.py  test_package_detail.py  test_scoring.py  test_search.py
tests/fixtures/: npm_express.json  pypi_requests.json
