[tool.poetry]
name = "agent-package-index"
version = "0.1.0"
description = "Agent-readable package index with reputation scoring for PyPI and npm"
authors = []
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1"
sqlalchemy = "^2.0"
psycopg2-binary = "^2.9"
celery = { version = "^5.4", extras = ["redis"] }
redis = "^5.0"
python-dotenv = "^1.0"
gunicorn = "^23.0"
httpx = "^0.28"
tenacity = "^9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-flask = "^1.3"
ruff = "^0.9"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
